# aoc2024

./: README.md  aoc2024.opam  dune-project
inputs/: 02_small.txt  05.txt
jls/: dune  jls.ml  jls.mli
lib/: jls.ml  jls.mli
