(lang dune 3.12)

(name aoc2024)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "juliusiv")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc2024)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune core re)
 (tags
  (aoc aoc-2024)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
